--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,7 +19,7 @@
   </div>
 </nav>
 
-<div class="jumbotron">
+<div class="jumbotron center">
   <h1 class="display-4">Mongo Scraper</h1>
   <p class="lead">This app scrapes r/ProgrammerHumor for the current trending posts and allows you to make notes</p>
   <hr class="my-4">
